Fix weird spacing between the header and the hero section in the landing page

--- a/src/index.css
+++ b/src/index.css
@@ -183,7 +183,8 @@ a:hover {
 }
 
 #landing-hero {
-  height: calc(100dvh - 70px);
+  margin-top:-1px;
+  height: calc(100dvh - 69px);
 }
 
 
